# dbt-tutorial-course

./: .gitignore  .python-local  .sqlfluff  .sqlfluffignore  README.md  check_venv.py  credentials.json  dagster.yaml  dbt_project.yml  env_variables.sh  et HEAD path_to_directory_or_file  materials.code-workspace  notes.txt  pyproject.toml  readme.txt  requirements.txt  setup.py  setup_python_virtual_env.sh  venvsetup.txt
.github/: PULL_REQUEST_TEMPLATE.md
Lessons/: dbt_project.yml
New_lesson/: dbt_project.yml
Test/: dbt_project.yml
Yetunde1/: dbt_project.yml
answers/: .gitignore  .user.yml  README.md  ashish  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  profiles.yml.xxx
bq/: dbt_project.yml
colslaue_dbt/: dbt_project.yml
course/: dbt_project.yml
dbt-env/: pyvenv.cfg
dbt_from_scratch/: dbt_project.yml
dbt_learning/: pyvenv.cfg
dbt_trainning_proj/: dbt_project.yml
dbtcourse/: pyvenv.cfg
docs/: Lesson+notes+-+adding+tests+to+our+first+model+yml.html  Lesson+notes+-+dbt+init.html  Lesson+notes+-+dbt+utils+&+expectations.html  Lesson+notes+-+generating+first+model+yml+file.html  Lesson+notes+-+generating+our+first+SQL+file.html  Lesson+notes+-+other+staging+models.html  Lesson+notes+-+other+staging+yml+files.html  Lesson+notes+-+running+our+first+SQL+file.html  commands.MD
lecon/: dbt_project.yml
lessons_dagster/: .env  pyproject.toml  setup.py
lessons_dagster/lessons_dagster/: assets.py  constants.py  definitions.py  jobs.py  project.py  schedules.py  sensors.py
lessons_dagster/lessons_dagster/partitions/: __init__.py
(+203 files in other folders)
