[tool.poetry]
name = "dbt-tutorial-course"
version = "0.1.0"
description = ""
authors = ["choatej <choatej@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.5"
dbt-bigquery = "1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
