[project]
name = "lessons_dagster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "lessons_dagster.definitions"
code_location_name = "lessons_dagster"
working_directory = "lessons_dagster"
